# Parallelized-Windowed-Hough-Transform

./: README.md
Hough_CUDA/: CMakeLists copy.txt  CMakeLists.txt  build.sh  run.sh  run_hello.sh  run_trials.sh  run_trials_serial.sh  run_trials_v100.sh  slurm_parameters.txt
Hough_CUDA/apps/: CMakeLists.txt  hello_world.cu  main_hough_rectangle.cpp  main_hough_rectangle_cuda.cu  main_hough_rectangle_cuda_windows.cu
Hough_CUDA/build_backup/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  output_img.txt
Hough_CUDA/build_backup/apps/: Makefile  cmake_install.cmake  find_pairs  main_hough_rectangle  main_hough_rectangle_cuda
Hough_CUDA/build_backup/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Hough_CUDA/build_backup/tests/integration_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_apps
Hough_CUDA/build_backup/tests/unit_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_rectangle_utils
Hough_CUDA/include/: process_image.hpp
Hough_CUDA/src/: configs.json  process_image.cu
Hough_CUDA/tests/integration_tests/: test_apps.cpp
Hough_OpenMP/: run_trials.sh
Hough_OpenMP/apps/: main_hough_rectangle.cpp
Hough_OpenMP/include/: io.hpp  rectangle_utils.hpp
Hough_OpenMP/src/: configs.json  io.cpp
